Added Rain and Dynamic clouds

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/lobby.lobby
-EditorStartupMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
+GameDefaultMap=/Game/Levels/terrain.terrain
+EditorStartupMap=/Game/Levels/terrain.terrain
 GlobalDefaultGameMode=/Game/Blueprints/CustomeGame.CustomeGame_C
 GameInstanceClass=/Script/MultiPlayer.RPG_Start
 
