--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -19,3 +19,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="MultiPlayerGameMode")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="MultiPlayerCharacter")
 
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.AutoExposure=True
+
