--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -22,3 +22,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.RendererSettings]
 r.DefaultFeature.AutoExposure=True
 
+[/Script/NavigationSystem.NavigationSystemV1]
+bGenerateNavigationOnlyAroundNavigationInvokers=True
+
